Add Sap service and SQL object

--- a/SAPWeb/SAPWeb.csproj
+++ b/SAPWeb/SAPWeb.csproj
@@ -118,8 +118,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\Common.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\ServiceLayerSync.cs" />
+    <Compile Include="App_Start\SQL_CONN_Class.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -127,7 +130,24 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Activities.cs" />
+    <Compile Include="Models\BusinessPartners.cs" />
+    <Compile Include="Models\Common.cs" />
+    <Compile Include="Models\Expense.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Leave.cs" />
+    <Compile Include="Models\SalesDocument.cs" />
+    <Compile Include="Models\SalesOpportunity.cs" />
+    <Compile Include="Models\SalesProjection.cs" />
+    <Compile Include="Models\SalesQuotation.cs" />
+    <Compile Include="Models\SaveAnswer.cs" />
+    <Compile Include="Models\SendQuestion.cs" />
+    <Compile Include="Models\Service.cs" />
+    <Compile Include="Models\Travel.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Implementation\AuthRepository.cs" />
+    <Compile Include="Repository\Interface\IAuthRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -2332,7 +2352,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
