--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -4,11 +4,18 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	<connectionStrings>
+		<add name="SAPSQLCONN" connectionString="Data Source=VCCRPD041;Initial Catalog=SHAKTIHONEY_CRM;User ID=sa;Password=vcerp@123;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	<add key="ServiceLayerURL" value="http://VCCRPD041:50001/b1s/v1/" />
+	<add key="SAPUserName" value="manager" />
+	<add key="SAPPassword" value="Vc@erp_123" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
