--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="SAPSQLCONN" connectionString="Data Source=VCCRPD041;Initial Catalog=SHAKTIHONEY_CRM;User ID=sa;Password=vcerp@123;" providerName="System.Data.SqlClient" />
+		<add name="SAPSQLCONN" connectionString="Data Source=116.202.196.28;Initial Catalog=PO_TEST;User ID=sa;Password=sa@2017;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
