--- a/SAPWeb/SAPWeb.csproj
+++ b/SAPWeb/SAPWeb.csproj
@@ -124,6 +124,7 @@
     <Compile Include="App_Start\ServiceLayerSync.cs" />
     <Compile Include="App_Start\SQL_CONN_Class.cs" />
     <Compile Include="Controllers\AuthController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SalesQuotationController.cs" />
@@ -147,9 +148,12 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Implementation\AuthRepository.cs" />
+    <Compile Include="Repository\Implementation\CustomerRepository.cs" />
     <Compile Include="Repository\Implementation\SalesQuotationRepository.cs" />
     <Compile Include="Repository\Interface\IAuthRepository.cs" />
+    <Compile Include="Repository\Interface\ICustomerRepository.cs" />
     <Compile Include="Repository\Interface\ISalesQuotationRepository.cs" />
+    <Compile Include="Utility\Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -173,6 +177,10 @@
     <Content Include="Content\Common\SAPWeb.ajax.js" />
     <Content Include="Content\Common\SAPWeb.control.js" />
     <Content Include="Content\Common\tableHelper.js" />
+    <Content Include="Content\custom.css" />
+    <Content Include="Content\Page\SalesQuotation.js" />
+    <Content Include="Content\theme\plugins\components\autocomplete\css\jquery.auto-complete.css" />
+    <Content Include="Content\theme\plugins\components\autocomplete\js\jquery.auto-complete.min.js" />
     <Content Include="Content\theme\plugins\components\blockUI\jquery.blockUI.js" />
     <Content Include="Content\theme\plugins\components\bootstrap-datepicker\bootstrap-datepicker.min.css" />
     <Content Include="Content\theme\plugins\components\bootstrap-datepicker\bootstrap-datepicker.min.js" />
@@ -2363,6 +2371,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Customer\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
