--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -16,6 +16,8 @@
 	<add key="ServiceLayerURL" value="http://VCCRPD041:50001/b1s/v1/" />
 	<add key="SAPUserName" value="manager" />
 	<add key="SAPPassword" value="Vc@erp_123" />
+
+	  <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
