--- a/SAPWeb/SAPWeb.csproj
+++ b/SAPWeb/SAPWeb.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\SalesQuotationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -149,9 +150,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Implementation\AuthRepository.cs" />
     <Compile Include="Repository\Implementation\CustomerRepository.cs" />
+    <Compile Include="Repository\Implementation\ItemRepository.cs" />
     <Compile Include="Repository\Implementation\SalesQuotationRepository.cs" />
     <Compile Include="Repository\Interface\IAuthRepository.cs" />
     <Compile Include="Repository\Interface\ICustomerRepository.cs" />
+    <Compile Include="Repository\Interface\IItemRepository.cs" />
     <Compile Include="Repository\Interface\ISalesQuotationRepository.cs" />
     <Compile Include="Utility\Extensions.cs" />
   </ItemGroup>
@@ -2372,6 +2375,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Customer\" />
+    <Folder Include="Views\Item\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
