--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="SAPSQLCONN" connectionString="Data Source=116.202.196.28;Initial Catalog=PO_TEST;User ID=sa;Password=sa@2017;" providerName="System.Data.SqlClient" />
+		<add name="SAPSQLCONN" connectionString="Data Source=41.222.4.166;Initial Catalog=PO_TEST;User ID=sa;Password=B1Admin;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -16,6 +16,7 @@
 	<add key="ServiceLayerURL" value="http://VCCRPD041:50001/b1s/v1/" />
 	<add key="SAPUserName" value="manager" />
 	<add key="SAPPassword" value="Vc@erp_123" />
+	  <add key="ObjectCode" value="23"/>
 
 	  <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
   </appSettings>
