database changes for sap

--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -13,9 +13,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-	<add key="ServiceLayerURL" value="http://VCCRPD041:50001/b1s/v1/" />
+	<add key="ServiceLayerURL" value="https://41.222.4.166:50000/b1s/v1/" />
 	<add key="SAPUserName" value="manager" />
-	<add key="SAPPassword" value="Vc@erp_123" />
+	<add key="SAPPassword" value="Sap@2023" />
 	  <add key="ObjectCode" value="23"/>
 
 	  <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
