--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -5,20 +5,20 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="SAPSQLCONN" connectionString="Data Source=SQL-SERVER;Initial Catalog=SBODEMOIN_NEW;User ID=sa;Password=sa@2017;" providerName="System.Data.SqlClient" />
+		<add name="SAPSQLCONN" connectionString="Data Source=SAP-SERVER;Initial Catalog=New_test;User ID=qa;Password=qa@2023;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <add key="ServiceLayerURL" value="https://127.0.0.1:50000/b1s/v1/" />
-	  <add key="SAPUserName" value="manager" />
-	  <add key="SAPPassword" value="Admin@123" />
-	  <add key="ObjectCode" value="23" />
-	  <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
-	  <add key="SalesQuationReport" value="Report1Quotation" />
-	  <add key="ARInvoiceReport" value="Report1AR" />
+    <add key="ServiceLayerURL" value="https://SAP-SERVER:50000/b1s/v1/" />
+    <add key="SAPUserName" value="manager" />
+    <add key="SAPPassword" value="Sap@2023" />
+    <add key="ObjectCode" value="23" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
+    <add key="SalesQuationReport" value="SalesQuotation" />
+    <add key="ARInvoiceReport" value="ARInvoice" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
