1. Message after adding invoice in solution to be changes. 2. Duplicate records to be removed from list.
4. Date format to be common for SAP and solution.DD/MM/YYYY

--- a/SAPWeb/SAPWeb.csproj
+++ b/SAPWeb/SAPWeb.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Repository\Interface\ICustomerRepository.cs" />
     <Compile Include="Repository\Interface\IItemRepository.cs" />
     <Compile Include="Repository\Interface\ISalesQuotationRepository.cs" />
+    <Compile Include="Utility\CommonAttributes.cs" />
     <Compile Include="Utility\CustomAuthenticationFilter.cs" />
     <Compile Include="Utility\Extensions.cs" />
     <Compile Include="Utility\ReportUtility.cs" />
