--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -15,6 +15,8 @@
     <add key="ServiceLayerURL" value="https://SAP-SERVER:50000/b1s/v1/" />
     <add key="SAPUserName" value="manager" />
     <add key="SAPPassword" value="Sap@2023" />
+	<!--<add key="SAPUserName" value="OUTLETS" />
+	<add key="SAPPassword" value="Sap@2023" />-->
     <add key="ObjectCode" value="23" />
     <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
     <add key="SalesQuationReport" value="SalesQuotation" />
