--- a/SAPWeb/Web.config
+++ b/SAPWeb/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="SAPSQLCONN" connectionString="Data Source=SAP-SERVER;Initial Catalog=New_test;User ID=qa;Password=qa@2023;" providerName="System.Data.SqlClient" />
+		<!--<add name="SAPSQLCONN" connectionString="Data Source=SAP-SERVER;Initial Catalog=New_test;User ID=qa;Password=qa@2023;" providerName="System.Data.SqlClient" />-->
+		<add name="SAPSQLCONN" connectionString="Data Source=SAP-SERVER;Initial Catalog=STEEL_2012;User ID=sa;Password=B1Admin;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -14,7 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ServiceLayerURL" value="https://SAP-SERVER:50000/b1s/v1/" />
     <add key="SAPUserName" value="manager" />
-    <add key="SAPPassword" value="Sap@2023" />
+    <add key="SAPPassword" value="1234" />
+	  <!--<add key="SAPPassword" value="Sap@2023" />-->
 	<!--<add key="SAPUserName" value="OUTLETS" />
 	<add key="SAPPassword" value="Sap@2023" />-->
     <add key="ObjectCode" value="23" />
